refatoração controllers e services